--- a/project.config.json
+++ b/project.config.json
@@ -123,6 +123,13 @@
           "pathName": "pages/index/index",
           "query": "",
           "scene": null
+        },
+        {
+          "id": -1,
+          "name": "about",
+          "pathName": "pages/aboutPage/about/about",
+          "query": "",
+          "scene": null
         }
       ]
     }
