--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -35,7 +35,8 @@
       "root": "pages/aboutPage/package1",
       "pages": [
         "discover/discover",
-        "algorithm/algorithm"
+        "algorithm/algorithm",
+        "bug/bug"
       ]
     }
   ],
