--- a/project.config.json
+++ b/project.config.json
@@ -128,6 +128,12 @@
         {
           "name": "manageIdentify",
           "pathName": "pages/aboutPage/package/manageIdentify/manageIdentify",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "log",
+          "pathName": "pages/aboutPage/package1/log/log",
           "scene": null
         }
       ]
