--- a/project.config.json
+++ b/project.config.json
@@ -26,11 +26,13 @@
       "disablePlugins": [],
       "outputPath": ""
     },
+    "enableEngineNative": false,
     "useIsolateContext": true,
     "useCompilerModule": true,
     "userConfirmedUseCompilerModuleSwitch": false,
     "packNpmManually": false,
-    "packNpmRelationList": []
+    "packNpmRelationList": [],
+    "minifyWXSS": true
   },
   "appid": "wx406f0470244a78c4",
   "projectname": "tanei",
@@ -106,7 +108,6 @@
           "scene": null
         },
         {
-          "id": 8,
           "name": "update",
           "pathName": "pages/index/index",
           "query": "",
@@ -134,6 +135,12 @@
         {
           "name": "log",
           "pathName": "pages/aboutPage/package1/log/log",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "nlp",
+          "pathName": "pages/aboutPage/package1/nlp/nlp",
           "scene": null
         }
       ]
