--- a/cloudfunctions/usersHelper/package.json
+++ b/cloudfunctions/usersHelper/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.1.2"
+    "wx-server-sdk": "^2.4.0"
   }
 }
