--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,8 @@
       "pages": [
         "statistics/statistics",
         "feedback/feedback",
-        "QASystem/QASystem"
+        "QASystem/QASystem",
+        "process/process"
       ]
     },
     {
@@ -23,7 +24,8 @@
         "manageIdentify/manageIdentify",
         "manageMember/manageMember",
         "myIdentity/myIdentity",
-        "myReceivedRepairSheet/myReceivedRepairSheet"
+        "myReceivedRepairSheet/myReceivedRepairSheet",
+        "Instruction/Instruction"
       ]
     },
     {
