--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -70,7 +71,8 @@
           "name": "update",
           "pathName": "pages/index/index",
           "query": "",
-          "scene": null
+          "scene": null,
+          "launchMode": "default"
         },
         {
           "id": -1,
@@ -113,8 +115,8 @@
           "name": "QASystem",
           "pathName": "pages/homePage/package/QASystem/QASystem",
           "query": "",
-          "scene": null,
-          "launchMode": "default"
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
